[DSTEW-2120] - Fix determanistic sort to be base on direction